Fix styling of frequency input columns
The Period and Cap column headers were slightly too wide and did not
line up with the controls beneath.

Additionally, the delete buttons have been made to line up with the
right-hand side of form, as has the add new custom period button.

--- a/src/components/Wizard/wizard.scss
+++ b/src/components/Wizard/wizard.scss
@@ -155,18 +155,27 @@
         padding-top: 0.5rem;
 
         .custom-input-col,
-        .custom-help-col {
+        .custom-help-col,
+        .custom-header-col {
             @extend .col-5;
         }
 
         .custom-trash-col {
             @extend .col-1;
             @extend .offset-1;
+
+            .btn {
+                width: 100%;
+            }
         }
     }
 
     .form-buttons .col {
         @extend .col-4;
+
+        .btn {
+            width: 100%;
+        }
     }
 
     .form-row {
